# crab_submission_helper

./: .gitignore  .pylintrc  2024_fiducial_maps_batch_submission.yaml  README.md  crab_manager.py  example_batch_submission.yaml  generator.py  merger.py  notification.py  pyproject.toml  requirements.txt
batch_files/: 2024_Electron_backgrounds.yml  2024_FakeTracks_background.yml  2024_Muon_backgrounds.yml  2024_Tau_background.yml
configs/: datasets.toml  job_options.toml  selections.toml  templates.yml
data/templates/: config_cfg_template.py  config_selections_template.py  crab_template.py  crab_template_nlayers.py
lib/: crab_helper.py  generators.py  google_sheet_helper.py  notifications.py  parse_helper.py  parser.py
scripts/: NLayers_submission_without_crab_directories.py  cleanEOSSpace.py  crab_manager.sh  get_status.sh  merge.sh  resubmit.sh  status.sh  status_manual.py  submit.sh
src/: crab_helper.py  crab_manager.sh  get_status.sh
src/crab_submission_helper/: config.py  main.py
src/crab_submission_helper/data/templates/: config_cfg_sim_template.py  crab_template.py  (+3 more)
src/crab_submission_helper/lib/: config.py  crab_helper.py  eos_helper.py  generators.py  google_sheet_helper.py  notifications.py  parse_helper.py  utils.py
templates/: config_cfg.py.j2  crab_template.py.j2  selections.py.j2  submission_script.sh.j2
tests/: failedFiles.json  failedLumis.json  stat.json  test.py  test_crab_helper.py  test_google_sheet_helper.py  test_notifications.py  test_parser_helper.py
tests/testAssets/: example_crab_getoutput.txt  example_crab_status_output.txt
